--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+dj-database-url==2.3.0
 Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
@@ -8,8 +9,10 @@ gunicorn==23.0.0
 inflection==0.5.1
 packaging==25.0
 PyJWT==2.9.0
+python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 sqlparse==0.5.3
+typing_extensions==4.13.2
 tzdata==2025.2
 uritemplate==4.1.1
