--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ drf-yasg==1.21.10
 gunicorn==23.0.0
 inflection==0.5.1
 packaging==25.0
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dotenv==1.1.0
 pytz==2025.2
