updated database url to jeffdbPostgres

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SECRET_KEY='django-insecure-bv)$s@3gcjqq9pkhmge%l^2=^(0v)gob(%^az*gowykz4p%2j-'
-DATABASE_URL='postgresql://healthuser:IrYUfMAtT2R13bZg4zPSrrZDtby4AHAa@dpg-d06jdfc9c44c73fjuabg-a/healthinfo_postgre'
+DATABASE_URL='postgresql://jeffadmin:E4c5Wte2ECYfCZXcVHJWcq0BmC5CJTdE@dpg-d3180956ubrc73c6jnjg-a/jeffs_db_qdbg'
